xserver-xorg-video-nouveau (1:0.0.15+git20100329+7858345-1) UNRELEASED; urgency=low

  * New upstream snapshot.
  * Ship an upstream changelog generated from "git log".
  * Update xsfbs to 2a1b4553fc2c5ba982e8bb8be4c504e28ce79ed1.
  * Remove dependency on linux-nouveau-modules, current Debian kernels
    already include a nouveau module.
  * Fold long (Build-)Depends lines in debian/control.
  * Bump Build-dependencies on xserver-xorg-dev and libdrm-dev.
  * Drop conflict with nvidia-glx.  As long as one does not run
    applications that require a library that nvidia-glx diverts, the
    drivers can coexist peacefully.
  * Bump Standards-Version to 3.8.4, no changes needed.

 -- Sven Joachim <svenjoac@gmx.de>  Mon, 29 Mar 2010 10:10:00 +0200

xserver-xorg-video-nouveau (1:0.0.10~git+20090701+c0bf670-1) experimental; urgency=low

  * New upstream snapshot.
    - c0bf670... wfb: fix stupid thinko + more safety
    - a12cb5c... bios: oops
    - e66867e... bios: use image from PRAMIN in preference to PROM on NV50
    - 42c5730... wrap BlockHandler a little earlier
    - 09e663a... kms: safer fb resize func
    - 90be5d5... wfb: use straight memcpy hook if no tiled wraps present
    - 86d905d... wfb: be more cautious in a few places
    - 1bcbc4b... kms: small cleanup
    - c2d3550... kms: fix rotation buffer pitch
    - 6fd9829... kms: point rotation pixmap at correct buffer
    - 67f8ebe... nv50: create non-linear scanout buffers for rotation
    - b7e3306... Add DVI-A output info for Mac card missing bios tables 
      (#21273)
    - 01b19c9... nv50: sigh
    - 4d9e63b... wfb: "mode0" tiles have the same pitch as the others
    - 02ed6b6... wfb: work-around wfb suckage
    - 669c59e... wfb: need a 64-bit datatype for multiply_factor
    - 86dedb7... fix some pitch issues
    - 794a277... nv50: use libwfb for pixmap access when driver pixmaps 
      enabled
    - 11d9690... exa: use the sane CreatePixmap hook, if available